--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section>
             <div class="left-sc">
                 <p>Hi,There!</p>
-                <h4>I Am <span class="input"></span></h4>
+                <h4>I <span class="input"></span></h4>
                 <p>👋 Hey,I am a passionate backend developer 🐍🌪️🔧 with expertise in Python Django and PostgreSQL. On the front-end side, I'm well-versed in HTML, CSS, and JavaScript, allowing me to create visually appealing and user-friendly interfaces. and programming is not just a profession for me; it's a deep love. I find immense joy in exploring new concepts, pushing boundaries, and solving complex problems. Let's connect and embark on this exciting coding journey together! 🚀💪</p>
                 <div class="socia-icon">
                     <a href="https://www.linkedin.com/in/aneeb-p-a83a04280/"><i class="fa-brands fa-linkedin"></i></a>   
@@ -53,7 +53,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed(".input", {
-            strings:["ANeeb","Softwate Engineer"],
+            strings:["Rich","dont do illegal activities","good person","can ddos","can doxxing you","can hack ur game"],
             typeSpeed: 50,
             backSpeed: 60,
             loop:true
