--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed(".input", {
-            strings:["Rich","dont do illegal activities","good person","can ddos","can doxxing you","can hack ur game"],
+            strings:["Rich🤑","dont do illegal activities","good person","like doing some stuff","can ban your whatsapp","can ddos","make bot","can doxxing you","can hack ur game","have unhittable web","better than you"],
             typeSpeed: 50,
             backSpeed: 60,
             loop:true
