--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed(".input", {
-            strings:["Rich🤑","dont do illegal activities","good person","like doing some stuff","can ban your whatsapp","can ddos","make bot","can doxxing you","need friend:)","can hack ur game","have unhittable web","do carding","cracking","Hacker","better than you","why u still reading¿],
-            typeSpeed: 50,
-            backSpeed: 60,
+            strings:["Rich🤑","dont do illegal activities","good person","like doing some stuff","can ban your whatsapp","can ddos","make bot","can doxxing you","need friend:)","can hack ur game","have unhittable web","do carding","cracking","Hacker","better than you","why u still reading¿"],
+            typeSpeed: 40,
+            backSpeed: 45,
             loop:true
             
         });
